--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,10 @@ before_install:
 
 
 script:
-- go test -v -race -timeout=90s github.com/optiopay/kafka/...
-- go vet github.com/optiopay/kafka/...
-- errcheck github.com/optiopay/kafka/...
-- go test -bench '.*' -run none github.com/optiopay/kafka/...
+- go test -v -race -timeout=90s github.com/dropbox/kafka/...
+- go vet github.com/dropbox/kafka/...
+- errcheck github.com/dropbox/kafka/...
+- go test -bench '.*' -run none github.com/dropbox/kafka/...
 
 env:
 - WITH_INTEGRATION=true GOMAXPROCS=4
