--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
 
 
 script:
-- go test -v -race -timeout=90s github.com/dropbox/kafka/...
+- go test -v -p=1 -race -timeout=90s github.com/dropbox/kafka/...
 - go vet github.com/dropbox/kafka/...
 - go test -bench '.*' -run none github.com/dropbox/kafka/...
 
